--- a/src/components/charList/charList.scss
+++ b/src/components/charList/charList.scss
@@ -27,6 +27,9 @@
             height: 200px;
             object-fit: cover;
             transform: translate(-15px, -15px);
+            &.dynamic-fit-unset {
+                object-fit: unset;
+            }
         }
         &_selected {
             box-shadow: 0 5px 20px $main-color;
